completed basic css D1

--- a/index.html
+++ b/index.html
@@ -7,12 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="timebx">
-        <div class="time">12:34</div>
-        <div class="ampm">
-            <div class="ampmtext">AM</div>
-            <div class="ampmtext">PM</div>
+    <div class="bottom-right">
+        <img src="assets/icons/settings.svg" alt="settings" class="icon">
+        <img src="assets/icons/info.svg" alt="info" class="icon">
+    </div>
+
+    <div class="bottom-left">
+
+        <div class="timebx">
+            <div class="time">12:34</div>
+            <div class="ampm">
+                <div class="ampmtext">AM</div>
+                <div class="ampmtext">PM</div>
+            </div>
         </div>
+    
+        <div class="toolbar">
+            <div class="button-tool" id="pomodoro">
+                <img src="assets/icons/pomo.svg" alt="pomodoro" class="tool-icon">  
+            </div>
+            <div class="button-tool" id="music">
+                <img src="assets/icons/music.svg" alt="music" class="tool-icon">
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
