--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="beta-warning" onclick="hideWarning()">Warning : Muse is currently not ready for use : Most features are under heavy development : Features are subject to change : Click to view a very unstable version</div>
+
     <div class="bottom-right">
         <img src="assets/icons/settings.svg" alt="settings" class="icon">
         <img src="assets/icons/info.svg" alt="info" class="icon">
@@ -32,5 +34,6 @@
         </div>
         
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
