made the pomodoro css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <div class="beta-warning" onclick="hideWarning()">Warning : Muse is currently not ready for use : Most features are under heavy development : Features are subject to change : Click to view a very unstable version</div>
+    
+    <div class="pomoplacer">
+
+        <div class="fullpomo">
+            <div class="pomo-top">
+                <div class="pomo-move"><img src="assets/icons/move.svg" alt="move" class="move"></div>
+                <div class="pomo-close" id="close-pomo"><img src="assets/icons/close.svg" alt="close" class="pomo-icon"></div>
+            </div>
+        
+            <div class="pomodoro-timer">25:00</div>
+            <div class="pomo-controls">
+                <div class="pomo-button" id="playpause"><img src="assets/icons/play.svg" alt="play" class="pomo-icon"></div>
+                <div class="pomo-button" id="edit"><img src="assets/icons/edit.svg" alt="edit" class="pomo-icon"></div>
+            </div>
+        </div>
+
+    </div>
 
     <div class="bottom-right">
         <img src="assets/icons/settings.svg" alt="settings" class="icon">
