--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="beta-warning" onclick="hideWarning()">Warning : Muse is currently not ready for use : Most features are under heavy development : Features are subject to change : Click to view a very unstable version</div>
-    
+    <!-- Beta Warning -->
     <div class="pomoplacer">
 
         <div class="fullpomo">
