Added open and close functionality for pomodoro

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="fullpomo">
             <div class="pomo-top">
                 <div class="pomo-move"><img src="assets/icons/move.svg" alt="move" class="move"></div>
-                <div class="pomo-close" id="close-pomo"><img src="assets/icons/close.svg" alt="close" class="pomo-icon"></div>
+                <div class="pomo-close" id="close-pomo"><img src="assets/icons/close.svg" alt="close" class="pomo-icon" onclick="pomoShowHide()"></div>
             </div>
         
             <div class="pomodoro-timer">25:00</div>
@@ -42,7 +42,7 @@
         </div>
     
         <div class="toolbar">
-            <div class="button-tool" id="pomodoro">
+            <div class="button-tool" id="pomodoro" onclick="pomoShowHide()">
                 <img src="assets/icons/pomo.svg" alt="pomodoro" class="tool-icon">  
             </div>
             <div class="button-tool" id="music">
