added half of explode animation

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="time">12:29</div>
+    <div class="text-3d">
+        <div class="time">12:29</div>
+    </div>
+
 
     <div class="dock">
         <div class="dock-center">
-            <div class="tool-icon-bx" id="explode"><img src="assets/explode-icon.svg" alt="explode-icon" class="tool-icon"></div>
+            <div class="tool-icon-bx" id="explode" onclick="explode()"><img src="assets/explode-icon.svg" alt="explode-icon" class="tool-icon"></div>
         </div>
     
         <div class="dock-center">
@@ -24,6 +27,6 @@
         </div>
     </div>
 
-    
+    <script src="main.js"></script>
 </body>
 </html>
