--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="text-3d">
-        <div class="time">12:29</div>
+        <div class="time" onclick="explode()">12:29</div>
         
     </div>
 
