fixed focus issues and collision issues with the pomodoro window

--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
 
                 <div class="window-controls-sub">
                     <div class="top-icon-base" id="top-icon-minimize"><img src="assets/minimize.svg" alt="minimize-icon" class="top-icon"></div>
-                    <div class="top-icon-base" id="top-icon-close"><img src="assets/close.svg" alt="close-icon" class="top-icon"></div>
+                    <div class="top-icon-base" id="top-icon-close"><img src="assets/close.svg" alt="close-icon" class="top-icon" onclick="pomodoro()"></div>
                 </div>
             </div>
 
-            <div class="pomo-mode-wrapper">
-                <div class="pomo-mode">
-                    <div class="pomo-mode-item">Pomodoro</div>
-                    <div class="pomo-mode-item">Break</div>
-                    <div class="pomo-mode-item">Break +</div>
-                </div>
+            <div class="pomo-mode">
+                <div class="pomo-mode-item"><div class="pomo-mode-item-text">Pomodoro</div></div>
+                <div class="pomo-mode-item"><div class="pomo-mode-item-text">Break</div></div>
+                <div class="pomo-mode-item"><div class="pomo-mode-item-text">Break +</div></div>
             </div>
 
             <div class="pomo-timer">25:00</div>
-            <div class="pomo-play-wrapper"><img src="assets/play.svg" alt="pomo-play" class="pomo-play"></div>
+            <img src="assets/play.svg" alt="pomo-play" class="pomo-play">
+
         </div>
     </div>
 
