completed the css for pomodoro and added time

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
 
             <div class="pomo-mode">
-                <div class="pomo-mode-item"><div class="pomo-mode-item-text">Pomodoro</div></div>
-                <div class="pomo-mode-item"><div class="pomo-mode-item-text">Break</div></div>
-                <div class="pomo-mode-item"><div class="pomo-mode-item-text">Break +</div></div>
+                <div class="pomo-mode-item" id="pomoMode1" onclick="switchPomoMode(1)"><div class="pomo-mode-item-text" id="pomoModeText1">Pomodoro</div></div>
+                <div class="pomo-mode-item" id="pomoMode2" onclick="switchPomoMode(2)"><div class="pomo-mode-item-text" id="pomoModeText2">Break</div></div>
+                <div class="pomo-mode-item" id="pomoMode3" onclick="switchPomoMode(3)"><div class="pomo-mode-item-text" id="pomoModeText3">Break +</div></div>
             </div>
 
             <div class="pomo-timer">25:00</div>
