--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="pomo-timer">25:00</div>
-            <img src="assets/play.svg" alt="pomo-play" class="pomo-play">
+            <img src="assets/play.svg" alt="pomo-play" class="pomo-play" onclick="startTimer()">
 
         </div>
     </div>
