made half of music player

--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
         <div class="time" onclick="explode()">12:29</div>
     </div>
 
+    <div class="music">
+        <div class="music-base">
+            <div class="window-title" id="window-title-2">Music Player</div>
+
+            <div class="window-controls" id="window-controls-2">
+                <div class="top-icon-base" id="top-icon-music"><img src="assets/music-icon.svg" alt="music-icon" class="top-icon"></div>
+
+                <div class="window-controls-sub">
+                    <div class="top-icon-base" id="top-icon-minimize"><img src="assets/minimize.svg" alt="minimize-icon" class="top-icon"></div>
+                    <div class="top-icon-base" id="top-icon-close"><img src="assets/close.svg" alt="close-icon" class="top-icon"></div>
+                </div>
+            </div>
+
+            <div class="video"></div>
+
+            <div class="linkbar">
+                <img src="assets/link.svg" alt="linkbar-icon" class="linkbar-icon">
+            </div>
+        </div>
+    </div>
+
     <div class="pomodoro">
         <div class="pomodoro-base">
             <div class="window-title">Pomodoro</div>
