completed the css for music player

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
             <div class="linkbar">
                 <img src="assets/link.svg" alt="linkbar-icon" class="linkbar-icon">
+                <input type="text" id="link" class="linkbar-text" placeholder="Paste YouTube video link here" name="link">
             </div>
         </div>
     </div>
@@ -64,7 +65,7 @@
     
         <div class="dock-center">
             <div class="tool-icon-bx" id="pomodoro" onclick="pomodoro()"><img src="assets/pomo-icon.svg" alt="pomo-icon" class="tool-icon"></div>
-            <div class="tool-icon-bx" id="music"><img src="assets/music-icon.svg" alt="music-icon" class="tool-icon"></div>
+            <div class="tool-icon-bx" id="music" onclick="music()"><img src="assets/music-icon.svg" alt="music-icon" class="tool-icon"></div>
         </div>
     
         <div class="dock-center">
