small visual fixes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div class="window-controls-sub">
                     <div class="top-icon-base" id="top-icon-minimize"><img src="assets/minimize.svg" alt="minimize-icon" class="top-icon"></div>
-                    <div class="top-icon-base" id="top-icon-close"><img src="assets/close.svg" alt="close-icon" class="top-icon"></div>
+                    <div class="top-icon-base" id="top-icon-close"><img src="assets/close.svg" alt="close-icon" class="top-icon" onclick="music()"></div>
                 </div>
             </div>
 
