Made Settings Layout

--- a/index.html
+++ b/index.html
@@ -60,6 +60,32 @@
         </div>
     </div>
 
+    <div class="settings">
+        <div class="settings-base">
+            <div class="window-title" id="window-title-3">Settings</div>
+
+            <div class="window-controls" id="window-controls-3">
+                <div class="top-icon-base" id="top-icon-music"><img src="assets/settings-icon.svg" alt="music-icon" class="top-icon"></div>
+
+                <div class="window-controls-sub">
+                    <div class="top-icon-base" id="top-icon-minimize-2"><img src="assets/minimize-black.svg" alt="minimize-icon" class="top-icon"></div>
+                    <div class="top-icon-base" id="top-icon-close-2"><img src="assets/close-black.svg" alt="close-icon" class="top-icon" onclick="music()"></div>
+                </div>
+            </div>
+
+            <div class="settings-menus">
+                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Layouts</div></div>
+                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Behaviour</div></div>
+                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Themes</div></div>
+                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Changelog</div></div>
+                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Layouts</div></div>
+            </div>
+
+            <div class="settings-page-base"></div>
+        </div>
+
+    </div>
+
     <div class="dock">
         <div class="dock-center">
             <div class="tool-icon-bx" id="explode" onclick="explode()"><img src="assets/explode-icon.svg" alt="explode-icon" class="tool-icon"></div>
