added dock layouts in settings => layouts (css)

--- a/index.html
+++ b/index.html
@@ -78,10 +78,22 @@
                 <div class="settings-menu-item-base"><div class="settings-menu-item-text">Behaviour</div></div>
                 <div class="settings-menu-item-base"><div class="settings-menu-item-text">Themes</div></div>
                 <div class="settings-menu-item-base"><div class="settings-menu-item-text">Changelog</div></div>
-                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Layouts</div></div>
+                <div class="settings-menu-item-base"><div class="settings-menu-item-text">About</div></div>
             </div>
 
-            <div class="settings-page-base"></div>
+            <div class="settings-page-base" id="layout-settings">
+                <div class="settings-page-title">Layouts</div>
+                <div class="settings-page-subtitle">Change the Layout of widgets</div>
+
+                <div class="settings-page-feature" id="dock-layout">01 Dock</div>
+
+                <div class="dock-layout-selection">
+                    <img src="assets/dock-layout-mode-split.svg" alt="dock-layout-mode-split" class="dock-layout-mode">
+                    <img src="assets/dock-layout-mode-union.svg" alt="dock-layout-mode-split" class="dock-layout-mode">
+                    <img src="assets/dock-layout-mode-left.svg" alt="dock-layout-mode-split" class="dock-layout-mode">
+                    <img src="assets/dock-layout-mode-right.svg" alt="dock-layout-mode-split" class="dock-layout-mode">
+                </div>
+            </div>
         </div>
 
     </div>
