made 3 options for the time layout

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="window-controls-sub">
                     <div class="top-icon-base" id="top-icon-minimize-2"><img src="assets/minimize-black.svg" alt="minimize-icon" class="top-icon"></div>
-                    <div class="top-icon-base" id="top-icon-close-2"><img src="assets/close-black.svg" alt="close-icon" class="top-icon" onclick="music()"></div>
+                    <div class="top-icon-base" id="top-icon-close-2"><img src="assets/close-black.svg" alt="close-icon" class="top-icon" onclick="settings()"></div>
                 </div>
             </div>
 
@@ -93,6 +93,16 @@
                     <img src="assets/dock-layout-mode-left.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="docklayout(3)">
                     <img src="assets/dock-layout-mode-right.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="docklayout(4)">
                 </div>
+
+                <div class="settings-page-feature" id="dock-layout">02 Time</div>
+
+                <div class="dock-layout-selection">
+                    <img src="assets/time-layout-center.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(1)">
+                    <img src="assets/time-layout-left.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(2)">
+                    <img src="assets/time-layout-right.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(3)">
+                    <!-- <img src="assets/time-layout-spaced.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(4)"> -->
+                </div>
+
             </div>
         </div>
 
