--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             </div>
 
             <div class="settings-menus">
-                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Layouts</div></div>
-                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Behaviour</div></div>
-                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Themes</div></div>
-                <div class="settings-menu-item-base"><div class="settings-menu-item-text">Changelog</div></div>
-                <div class="settings-menu-item-base"><div class="settings-menu-item-text">About</div></div>
+                <div class="settings-menu-item-base" id="smit1" onclick="smitIndex(1)"><div class="settings-menu-item-text">Layouts</div></div>
+                <div class="settings-menu-item-base" id="smit2" onclick="smitIndex(2)"><div class="settings-menu-item-text">Behaviour</div></div>
+                <div class="settings-menu-item-base" id="smit3" onclick="smitIndex(3)"><div class="settings-menu-item-text">Themes</div></div>
+                <div class="settings-menu-item-base" id="smit4" onclick="smitIndex(4)"><div class="settings-menu-item-text">Changelog</div></div>
+                <div class="settings-menu-item-base" id="smit5" onclick="smitIndex(5)"><div class="settings-menu-item-text">About</div></div>
             </div>
 
             <div class="settings-page-base" id="layout-settings">
@@ -100,10 +100,11 @@
                     <img src="assets/time-layout-center.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(1)">
                     <img src="assets/time-layout-left.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(2)">
                     <img src="assets/time-layout-right.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(3)">
-                    <!-- <img src="assets/time-layout-spaced.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(4)"> -->
+                    <img src="assets/time-layout-spaced.svg" alt="dock-layout-mode-split" class="dock-layout-mode" onclick="timelayout(4)">
                 </div>
 
             </div>
+
         </div>
 
     </div>
